--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,12 +10,5 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- script: Hello
-  displayName: 'Run a one-line script'
-- task: Bash@3
-  inputs:
-    targetType: 'inline'
-    script: |
-      # Write your commands here
-      
-      echo 'Hello world'
+- bash: 'curl -i -u FLyHmy44t8qnHckeenzx: -H "Content-Type:application/json" -H "Accept:application/json" -X POST -v http://182.76.197.43:3000/ProductDemo/assemblies/Java/transition/environments/$(env1)/commit -d ""'
+  displayName: Commit
