Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,3 +12,8 @@ pool:
 steps:
 - bash: 'curl -i -u FLyHmy44t8qnHckeenzx: -H "Content-Type:application/json" -H "Accept:application/json" -X POST -v http://182.76.197.43:3000/ProductDemo/assemblies/Java/transition/environments/qa-1/commit -d ""'
   displayName: Commit
+steps:
+- bash: |
+   curl -i -u FLyHmy44t8qnHckeenzx: -H "Content-Type:application/json" -H "Accept:application/json" -X GET -v http://182.76.197.43:3000/ProductDemo/assemblies/Java/transition/environments/$(env1)/releases/bom -o /tmp/releaseid.json
+   
+  displayName: 'Get Latest Release Bom'
