Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,5 +16,5 @@ steps:
    curl -i -u FLyHmy44t8qnHckeenzx: -H "Content-Type:application/json" -H "Accept:application/json" -X GET -v http://182.76.197.43:3000/ProductDemo/assemblies/Java/transition/environments/$(env1)/releases/bom -o /tmp/releaseid.json
   displayName: 'Get Latest Release Bom'
 - bash: |
-   echo releaseid=$(echo $(grep -oP '"releaseId"\s*:\s*\K\d+' /tmp/releaseid.json))
+   cat /tmp/releaseid.json
   displayName: 'Set Output Variable'
