--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,5 +16,8 @@ steps:
    curl -i -u FLyHmy44t8qnHckeenzx: -H "Content-Type:application/json" -H "Accept:application/json" -X GET -v http://182.76.197.43:3000/ProductDemo/assemblies/Java/transition/environments/qa-1/releases/bom -o /tmp/releaseid.json
   displayName: 'Get Latest Release Bom'
 - bash: |
-   cat /tmp/releaseid.json
+   releaseid=$(echo $(grep -oP '"releaseId"\s*:\s*\K\d+' /tmp/releaseid.json))
+   echo "##vso[task.setvariable variable=releaseid;]$releaseid"
   displayName: 'Set Output Variable'
+- bash: |
+   echo $(releaseid)
