--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,3 +12,12 @@ pool:
 steps:
 - bash: 'curl -i -u FLyHmy44t8qnHckeenzx: -H "Content-Type:application/json" -H "Accept:application/json" -X POST -v http://182.76.197.43:3000/ProductDemo/assemblies/Java/transition/environments/$(env1)/commit -d ""'
   displayName: Commit
+- bash: |
+   curl -i -u FLyHmy44t8qnHckeenzx: -H "Content-Type:application/json" -H "Accept:application/json" -X GET -v http://182.76.197.43:3000/ProductDemo/assemblies/Java/transition/environments/$(env1)/releases/bom -o /tmp/releaseid.json
+  displayName: 'Get Latest Release Bom'
+- bash: |
+   releaseid=$(echo $(grep -oP '"releaseId"\s*:\s*\K\d+' /tmp/releaseid.json))
+   echo "##vso[task.setvariable variable=releaseid;]$releaseid"
+  displayName: 'Set Output Variable'
+- bash: |
+   echo $(releaseid)
