--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,4 +20,5 @@ steps:
    echo "##vso[task.setvariable variable=releaseid;]$releaseid"
   displayName: 'Set Output Variable'
 - bash: |
-   echo $(releaseid)
+    curl -i -u FLyHmy44t8qnHckeenzx: -H "Content-Type:application/json" -H "Accept:application/json" -X POST -v http://182.76.197.43:3000/ProductDemo/assemblies/Java/transition/environments/$(env1)/deployments/ --data ''{"cms_deployment": {"releaseId": ''$(releaseid)'',"nsPath": "/ProductDemo/Java/$(env1)/bom"}}''
+  displayName: 'Deploy'
