--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,5 +20,5 @@ steps:
    echo "##vso[task.setvariable variable=releaseid;]$releaseid"
   displayName: 'Set Output Variable'
 - bash: |
-    curl -i -u FLyHmy44t8qnHckeenzx: -H "Content-Type:application/json" -H "Accept:application/json" -X POST -v http://182.76.197.43:3000/ProductDemo/assemblies/Java/transition/environments/$(env1)/deployments/ --data '{"cms_deployment": {"releaseId": '$releaseid',"nsPath": "/ProductDemo/Java/'$(env1)'/bom"}}'
+    curl -i -u FLyHmy44t8qnHckeenzx: -H "Content-Type:application/json" -H "Accept:application/json" -X POST -v http://182.76.197.43:3000/ProductDemo/assemblies/Java/transition/environments/$(env1)/deployments/ --data '{"cms_deployment": {"releaseId": '$(releaseid)',"nsPath": "/ProductDemo/Java/'$(env1)'/bom"}}'
   displayName: 'Deploy'
