--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,10 +20,13 @@ steps:
    echo "##vso[task.setvariable variable=releaseid;]$releaseid"
   displayName: 'Set Output Variable'
 - bash: |
-    curl -i -u FLyHmy44t8qnHckeenzx: -H "Content-Type:application/json" -H "Accept:application/json" -X POST -v http://182.76.197.43:3000/ProductDemo/assemblies/Java/transition/environments/$(env1)/deployments/ --data '{"cms_deployment": {"releaseId": '$(releaseid)',"nsPath": "/ProductDemo/Java/'$(env1)'/bom"}}'
+   curl -i -u FLyHmy44t8qnHckeenzx: -H "Content-Type:application/json" -H "Accept:application/json" -X POST -v http://182.76.197.43:3000/ProductDemo/assemblies/Java/transition/environments/$(env1)/deployments/ --data '{"cms_deployment": {"releaseId": '$(releaseid)',"nsPath": "/ProductDemo/Java/'$(env1)'/bom"}}'
   displayName: 'Deploy'
 - bash: |
    curl -i -u FLyHmy44t8qnHckeenzx: -H "Content-Type:application/json" -H "Accept:application/json" -X GET -v http://182.76.197.43:3000/ProductDemo/assemblies/Java/transition/environments/$(env1)/deployments/latest -o /tmp/deploymentid.json
    deploymentid=$(echo $(grep -oP '"deploymentId"\s*:\s*\K\d+' /tmp/deploymentid.json))
    echo "##vso[task.setvariable variable=deploymentid;]$deploymentid"
   displayName: 'Get Latest Deployment ID'
+- bash: |
+   echo $(deploymentid)
+  displayName: 'Show'
