Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,5 +28,5 @@ steps:
    echo "##vso[task.setvariable variable=deploymentid;]$deploymentid"
   displayName: 'Get Latest Deployment ID'
 - bash: |
-   curl -i -u FLyHmy44t8qnHckeenzx: -H "Content-Type:application/json" -H "Accept:application/json" -X GET -v http://182.76.197.43:3000/ProductDemo/assemblies/Java/transition/environments/$(env1)/$(deploymentid)/status
+   curl -i -u FLyHmy44t8qnHckeenzx: -H "Content-Type:application/json" -H "Accept:application/json" -X GET -v http://182.76.197.43:3000/ProductDemo/assemblies/Java/transition/environments/$(env1)/deployments/$(deploymentid)/status
   displayName: 'Verify Deploymet Status'
