--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,3 +27,7 @@ steps:
    deploymentid=$(echo $(grep -oP '"deploymentId"\s*:\s*\K\d+' /tmp/deploymentid.json))
    echo "##vso[task.setvariable variable=deploymentid;]$deploymentid"
   displayName: 'Get Latest Deployment ID'
+- bash: |
+   curl -i -u FLyHmy44t8qnHckeenzx: -H "Content-Type:application/json" -H "Accept:application/json" -X GET -v http://182.76.197.43:3000/ProductDemo/assemblies/Java/transition/environments/$(env1)/deployments/$(deploymentid)/status
+   successCriteria: eq(root['deploymentState'], 'complete')
+  displayName: 'success'
