--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,6 +5,8 @@
 
 trigger:
 - master
+jobs:
+ job: Trigger Deployment
 
 pool:
   vmImage: 'ubuntu-latest'
@@ -27,4 +29,3 @@ steps:
    deploymentid=$(echo $(grep -oP '"deploymentId"\s*:\s*\K\d+' /tmp/deploymentid.json))
    echo "##vso[task.setvariable variable=deploymentid;]$deploymentid"
   displayName: 'Get Latest Deployment ID'
-  
