--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,25 +1,4 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
-trigger:
-- master
-  jobs:
-    job: A
-    pool:
-      vmImage: 'ubuntu-latest'
-    steps:
-    - bash: 'curl -i -u FLyHmy44t8qnHckeenzx: -H "Content-Type:application/json" -H "Accept:application/json" -X POST -v http://182.76.197.43:3000/ProductDemo/assemblies/Java/transition/environments/$(env1)/commit -d ""'
-    displayName: Commit
-    - bash: |
-       curl -i -u FLyHmy44t8qnHckeenzx: -H "Content-Type:application/json" -H "Accept:application/json" -X GET -v http://182.76.197.43:3000/ProductDemo/assemblies/Java/transition/environments/$(env1)/releases/bom -o /tmp/releaseid.json
-    displayName: 'Get Latest Release Bom'
-    - bash: |
-       releaseid=$(echo $(grep -oP '"releaseId"\s*:\s*\K\d+' /tmp/releaseid.json))
-       echo "##vso[task.setvariable variable=releaseid;]$releaseid"
-    displayName: 'Set Output Variable'
-    - bash: |
-       curl -i -u FLyHmy44t8qnHckeenzx: -H "Content-Type:application/json" -H "Accept:application/json" -X POST -v http://182.76.197.43:3000/ProductDemo/assemblies/Java/transition/environments/$(env1)/deployments/ --data '{"cms_deployment": {"releaseId": '$(releaseid)',"nsPath": "/ProductDemo/Java/'$(env1)'/bom"}}'
-    displayName: 'Deploy'
-
+pool:
+  vmImage: 'ubuntu-16.04'
+steps:
+- bash: echo "Hello world"
