--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,6 @@
-pool:
-  vmImage: 'ubuntu-16.04'
-steps:
-- bash: echo "Hello world"
+jobs:
+- job: A
+  pool:
+   vmImage: 'ubuntu-16.04'
+  steps:
+  - bash: echo "A"
