Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,8 @@
-jobs:
-- job: A
-  pool:
-   vmImage: 'ubuntu-16.04'
-  steps:
-  - bash: echo "A"
+stages:
+- stage: A
+  jobs:
+  - job: A
+    pool:
+     vmImage: 'ubuntu-16.04'
+    steps:
+    - bash: echo "A"
