--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,3 +6,10 @@ stages:
      vmImage: 'ubuntu-16.04'
     steps:
     - bash: echo "A"
+- stage: B
+  jobs:
+  - job: A
+    pool:
+     vmImage: 'ubuntu-16.04'
+    steps:
+    - bash: echo "B"
