--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,25 +1,16 @@
 stages:
-- stage: Print
+- stage: commit
   jobs:
-  - job: A
-    pool:
-     vmImage: 'ubuntu-16.04'
-    steps:
-    - bash: echo "A"
-- stage: Verify_Release_State
-  jobs:
-  - job: A
+  - job: Commit
     pool: server
     steps:
     - task: InvokeRESTAPI@1
       inputs:
         connectionType: 'connectedServiceName'
-        serviceConnection: 'QA-1 Get Latest Release Bom ID'
-        method: 'GET'
+        serviceConnection: 'QA-1 Commit'
+        method: 'POST'
         headers: |
           {
           "Content-Type":"application/json", 
           "Accept":"application/json"
-          }
         waitForCompletion: 'false'
-        successCriteria: 'eq(root[''releaseState''], ''closed'')'
