Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,3 +14,9 @@ stages:
           "Content-Type":"application/json", 
           "Accept":"application/json"
         waitForCompletion: 'false'
+- stage: Verify_Release_State
+  jobs:
+  - job: Verify_Release_State
+    pool: server
+    steps:
+    
