Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,4 +28,4 @@ stages:
           "Accept":"application/json"
           }
         waitForCompletion: 'false'
-        successCriteria: 'eq(root[''releaseState''], ''disabled'')'
+        successCriteria: 'eq(root[''releaseState''], ''open'')'
