--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,7 +56,7 @@ stages:
     - task: Delay@1
       inputs:
         delayForMinutes: '20'
-  - job: Deploy
+  - job: Status
     pool: server
     steps:
     - task: InvokeRESTAPI@1
