Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,12 +50,12 @@ stages:
               }
           }
         waitForCompletion: 'false'
-  - job: Deploy
+  - job: Delay
     pool: server
     steps:
     - task: Delay@1
       inputs:
-        delayForMinutes: '20'
+        delayForMinutes: '1'
   - job: Status
     pool: server
     steps:
