--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,15 +61,17 @@ stages:
   - job: Status
     pool: server
     steps:
-    - task: InvokeRESTAPI@1
+    - task: Bash@3
       inputs:
-        connectionType: 'connectedServiceName'
-        serviceConnection: 'status'
-        method: 'GET'
-        headers: |
-          {
-          "Content-Type":"application/json", 
-          "Accept":"application/json"
-          }
-        urlSuffix: '194351/status'
-        waitForCompletion: 'false'
+        targetType: 'inline'
+        script: |
+          curl -i -u FLyHmy44t8qnHckeenzx: -H "Content-Type:application/json" -H "Accept:application/json" -X GET -v http://182.76.197.43:3000/ProductDemo/assemblies/Java/transition/environments/prod/releases/bom -o /tmp/deploymentid.json
+          deploymentid=$(echo $(grep -oP '"deploymentId"\s*:\s*\K\d+' /tmp/deploymentid.json))
+          echo "##vso[task.setvariable variable=deploymentid;]$deploymentid"
+  - job: Status
+    pool: server
+    steps:
+- task: Bash@3
+  inputs:
+    targetType: 'inline'
+    script: 'echo $(deploymentid)'
