--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -71,4 +71,7 @@ stages:
   - job: Status
     pool: server
     steps:
-    
+    - task: Bash@3
+      inputs:
+        targetType: 'inline'
+        script: 'echo $(deploymentid)'
