--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,6 +70,8 @@ stages:
           deploymentid=$(echo $(grep -oP '"deploymentId"\s*:\s*\K\d+' /tmp/deploymentid.json))
           echo "##vso[task.setvariable variable=deploymentid;]$deploymentid"
   - job: echo
+    dependsOn:
+    - Status
     pool:
      vmImage: 'ubuntu-16.04'
     steps:
